clear CSS Chapter 2.3

--- a/friends.html
+++ b/friends.html
@@ -28,10 +28,10 @@
             <h1 class="header_title">Friends</h1>
         </div>
         <div class="header_header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-cog"></i>
             </span>
         </div>
@@ -85,7 +85,7 @@
         </ul>
     </main>
     <nav class="nav">
-        <ul class="nav_list">
+        <ul class="nav__list">
             <li class="nav__list-item">
                 <a href="friends.html" class="nav__list_link">
                     <i class="fas fa-user"></i>
