--- a/chat.html
+++ b/chat.html
@@ -26,15 +26,15 @@
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left fa"></i>
             </a>
-            <h1 class="header_title">Best Friend</h1>
+            <h1 class="header__title">Best Friend</h1>
         </div>
         <div class="header_header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-bars"></i>
             </span>
         </div>
