--- a/find.html
+++ b/find.html
@@ -28,10 +28,10 @@
             <h1 class="header_title">Find</h1>
         </div>
         <div class="header_header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="far fa-comment"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-cog"></i>
             </span>
         </div>
@@ -94,7 +94,7 @@
         </ul>
     </main>
     <nav class="nav">
-        <ul class="nav_list">
+        <ul class="nav__list">
             <li class="nav__list-item">
                 <a href="friends.html" class="nav__list_link">
                     <i class="far fa-user"></i>
