--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     </div>
     <header class="header">
         <div class="header__header-column">
-            <h1 class="header_title">Chats</h1>
+            <h1 class="header__title">Chats</h1>
         </div>
         <div class="header_header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="far fa-comment"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-cog"></i>
             </span>
         </div>
@@ -62,7 +62,7 @@
         </ul>
     </main>
     <nav class="nav">
-        <ul class="nav_list">
+        <ul class="nav__list">
             <li class="nav__list-item">
                 <a href="friends.html" class="nav__list_link">
                     <i class="far fa-user"></i>
