--- a/more.html
+++ b/more.html
@@ -28,13 +28,13 @@
             <h1 class="header_title">More</h1>
         </div>
         <div class="header_header-column">
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <i class="fas fa-qrcode"></i>
             </span>
-            <span class="header_icon">
+            <span class="header__icon">
                 <a href="settings.html">
                     <i class="fas fa-cog"></i>
                 </a>
@@ -115,7 +115,7 @@
         </section>
     </main>
     <nav class="nav">
-        <ul class="nav_list">
+        <ul class="nav__list">
             <li class="nav__list-item">
                 <a href="friends.html" class="nav__list_link">
                     <i class="far fa-user"></i>
