--- a/find.html
+++ b/find.html
@@ -38,7 +38,7 @@
     </header>
     <main class="find">
         <header class="find__header">
-            <ul class="find_header-list">
+            <ul class="find__header-list">
                 <li class="find_header-button header-btn">
                     <span class="hader-btn_icon">
                         <i class="fas fa-qrcode fa-3x"></i>
@@ -78,7 +78,7 @@
                 Recommanded Friends
             </h5>
             <li class="frends__friend friend friend--lg">
-                <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                <img src="images/avatar.jpg" class="friend__avatar">
                 <div class="friend__content">
                     <span class="friend__name">
                         Nicolas Serrano
