--- a/friends.html
+++ b/friends.html
@@ -38,43 +38,49 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="frends__friend friend friend--lg">
-                <img src="images/avatar.jpg" class="g-avatar friend__avatar">
-                <div class="friend__content">
-                    <span class="friend__name">
-                        Nicolas Serrano
-                    </span>
-                    <span class="freind__status">
-                        nomadcoders.co
-                    </span>
+            <div class="frends__friend friend">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Nicolas Serrano
+                        </span>
+                        <span class="friend__status">
+                            nomadcoders.co
+                        </span>
+                    </div>
                 </div>
             </div>
         </header>
-        <div class="friends__plus-friend">
-            <h5 class="friends__plus-title">Plus friend</h5>
-            <div class="frends__friend friend friend--lg">
-                <img src="images/avatar.jpg" class="g-avatar friend__avatar">
-                <div class="friend__content">
-                    <span class="friend__name">
-                        Plus friend
-                    </span>
+        <div class="friends__plus">
+            <h5 class="friends__title">Plus friend</h5>
+            <div class="friends__friend friend">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" class="friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Plus friend
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
         <ul class="friends__list">
-            <h5 class="friend__title">Friends 14</h5>
+            <h5 class="friends__title">Friends 14</h5>
             <li class="frends__friend friend friend--lg">
-                <img src="images/avatar.jpg" class="g-avatar friend__avatar">
-                <div class="friend__content">
-                    <span class="friend__name">
-                        Nicolas Serrano
-                    </span>
-                    <span class="freind__status">
-                        nomadcoders.co
-                    </span>
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" class="friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Nicolas Serrano
+                        </span>
+                        <span class="friend__status">
+                            nomadcoders.co
+                        </span>
+                    </div>
                 </div>
                 <div class="friend__column">
-                    <div class="freind__now-listening">
+                    <div class="friend__now-listening">
                         <span>
                             FTIsland (FT NomadCoders)
                         </span>
