--- a/more.html
+++ b/more.html
@@ -44,14 +44,16 @@
     <main class="more">
         <header class="more__header">
             <div class="frends__friend friend friend--lg">
-                <img src="images/avatar.jpg" class="g-avatar friend__avatar">
-                <div class="friend__content">
-                    <span class="friend__name">
-                        Nicolas Serrano
-                    </span>
-                    <span class="freind__status">
-                        itnicolasme@gmail.com
-                    </span>
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Nicolas Serrano
+                        </span>
+                        <span class="friend__status">
+                            itnicolasme@gmail.com
+                        </span>
+                    </div>
                 </div>
                 <div class="friend__column">
                     <i class="far fa-comment-alt"></i>
