--- a/index.html
+++ b/index.html
@@ -41,21 +41,25 @@
     </header>
     <main class="chats">
         <ul class="chats__list">
-            <li class="chats_chat chat">
+            <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="images/avatar.jpg">
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Lynn
-                            </span>
-                            <span class="chat__preview">
-                                Going home
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home!
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                March 8
                             </span>
                         </div>
-                    </div>
-                    <div class="chat__colum">
-                        <span class="chat__timestamp">Yesterday</span>
                     </div>
                 </a>
             </li>
@@ -64,22 +68,23 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list_link">
+                <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list_link">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list_link">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list_link">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
