--- a/settings.html
+++ b/settings.html
@@ -37,26 +37,50 @@
         </div>
     </header>
     <main class="settings">
-        <ul class="settings__list">
-            <li class="settings__setting">
-                <span class="settings__icon">
-                    <i class="fas fa-lock"></i>
-                </span>
-                <span class="settings__title">Privacy</span>
-            </li>
-            <li class="settings__setting">
-                <span class="settings__icon">
-                    <i class="far fa-bell"></i>
-                </span>
-                <span class="settings__title">Notification</span>
-            </li>
-            <li class="settings__setting">
-                <span class="settings__icon">
-                    <i class="far fa-user"></i>
-                </span>
-                <span class="settings__title">Friends</span>
-            </li>
-        </ul>
+        <section class="setting__sections">
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <span class="settings__title">Privacy</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-bell"></i>
+                    </span>
+                    <span class="settings__title">Notification</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-user"></i>
+                    </span>
+                    <span class="settings__title">Friends</span>
+                </li>
+            </ul>
+        </section>
+        <section class="setting__sections">
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <span class="settings__title">Privacy</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-bell"></i>
+                    </span>
+                    <span class="settings__title">Notification</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-user"></i>
+                    </span>
+                    <span class="settings__title">Friends</span>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 
