--- a/more.html
+++ b/more.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://kit.fontawesome.com/3018248d36.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
 </head>
@@ -13,7 +14,7 @@
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
-            <span class="status-bar__clock">13:54</span>
+            <span class="status-bar__clock">13:54 </span>
         </div>
         <div class="status-bar__column">
             <i class="fas fa-clock"></i>
@@ -25,9 +26,9 @@
     </div>
     <header class="header">
         <div class="header__header-column">
-            <h1 class="header_title">More</h1>
+            <h1 class="header__title">More</h1>
         </div>
-        <div class="header_header-column">
+        <div class="header__header-column">
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
@@ -43,12 +44,12 @@
     </header>
     <main class="more">
         <header class="more__header">
-            <div class="frends__friend friend friend--lg">
+            <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
-                            Nicolas Serrano
+                            Nicolás Serrano
                         </span>
                         <span class="friend__status">
                             itnicolasme@gmail.com
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <div class="friend__column">
-                    <i class="far fa-comment-alt"></i>
+                    <i class="far fa-comment-alt fa-2x"></i>
                 </div>
             </div>
             <ul class="more__btn-list">
@@ -88,30 +89,24 @@
         </header>
         <section class="more__suggestions">
             <h5 class="more__title">Suggestions</h5>
-            <ul class="more_suggestions-list">
+            <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
-                    <span class="suggestion_icon">
-                        <i class="fas fa-quote-right fa-2x"></i>
+                    <span class="suggestion__icon">
+                        <i class="fas fa-quote-right "></i>
                     </span>
-                    <span class="suggestion__title">
-                        Kakao Story
-                    </span>
+                    <span class="suggestion__title">Kakao Story</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="suggestion_icon">
+                    <span class="suggestion__icon">
                         <i class="fas fa-beer fa-2x"></i>
                     </span>
-                    <span class="suggestion__title">
-                        Kakao friends
-                    </span>
+                    <span class="suggestion__title">Kakao friend</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="suggestion_icon">
+                    <span class="suggestion__icon">
                         <i class="fas fa-gamepad fa-2x"></i>
                     </span>
-                    <span class="suggestion__title">
-                        Friends Gem
-                    </span>
+                    <span class="suggestion__title">Friends Gem</span>
                 </li>
             </ul>
         </section>
@@ -119,22 +114,21 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list_link">
-                    <i class="far fa-user"></i>
-                </a>
+                <a href="friends.html" class="nav__list-link">
+                    <i class="far fa-user"></i></a>
             </li>
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list_link">
+                <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
                 </a>
             </li>
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list_link">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list_link">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
