--- a/find.html
+++ b/find.html
@@ -25,7 +25,7 @@
     </div>
     <header class="header">
         <div class="header__header-column">
-            <h1 class="header_title">Find</h1>
+            <h1 class="header__title">Find</h1>
         </div>
         <div class="header_header-column">
             <span class="header__icon">
@@ -117,6 +117,9 @@
             </li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
+    </div>
 </body>
 
 </html>
