--- a/chat.html
+++ b/chat.html
@@ -94,6 +94,9 @@
             </span>
         </div>
     </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small</span>
+    </div>
 </body>
 
 </html>
